code_semparse/eval/smcalflow/dataflow_exec_src/opendf/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASSIGN_NODE

Grammar

Rule 0     S' -> program
Rule 1     program -> value
Rule 2     program -> program value
Rule 3     parameters -> parameter
Rule 4     parameters -> parameters ITEM_SEPARATOR parameter
Rule 5     parameter -> <empty>
Rule 6     parameter -> tag_parameter
Rule 7     parameter -> simple_parameter
Rule 8     simple_parameter -> value
Rule 9     simple_parameter -> name NAME_VALUE_SEPARATOR value
Rule 10    tag_parameter -> TAG_CHAR simple_parameter
Rule 11    name -> IDENTIFIER
Rule 12    value -> ASSIGN_NAME
Rule 13    value -> ASSIGN_NODE_NUMBER
Rule 14    value -> DECLARE_ASSIGN_NAME value
Rule 15    value -> SPECIAL_FEATURE value
Rule 16    value -> expression
Rule 17    expression -> IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS
Rule 18    value -> IDENTIFIER
Rule 19    value -> QUOTED_STRING

Terminals, with rules where they appear

ASSIGN_NAME          : 12
ASSIGN_NODE          : 
ASSIGN_NODE_NUMBER   : 13
CLOSE_ARGUMENTS      : 17
DECLARE_ASSIGN_NAME  : 14
IDENTIFIER           : 11 17 18
ITEM_SEPARATOR       : 4
NAME_VALUE_SEPARATOR : 9
OPEN_ARGUMENTS       : 17
QUOTED_STRING        : 19
SPECIAL_FEATURE      : 15
TAG_CHAR             : 10
error                : 

Nonterminals, with rules where they appear

expression           : 16
name                 : 9
parameter            : 3 4
parameters           : 4 17
program              : 2 0
simple_parameter     : 7 10
tag_parameter        : 6
value                : 1 2 8 9 14 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . value
    (2) program -> . program value
    (12) value -> . ASSIGN_NAME
    (13) value -> . ASSIGN_NODE_NUMBER
    (14) value -> . DECLARE_ASSIGN_NAME value
    (15) value -> . SPECIAL_FEATURE value
    (16) value -> . expression
    (18) value -> . IDENTIFIER
    (19) value -> . QUOTED_STRING
    (17) expression -> . IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS

    ASSIGN_NAME     shift and go to state 3
    ASSIGN_NODE_NUMBER shift and go to state 4
    DECLARE_ASSIGN_NAME shift and go to state 5
    SPECIAL_FEATURE shift and go to state 6
    IDENTIFIER      shift and go to state 8
    QUOTED_STRING   shift and go to state 9

    program                        shift and go to state 1
    value                          shift and go to state 2
    expression                     shift and go to state 7

state 1

    (0) S' -> program .
    (2) program -> program . value
    (12) value -> . ASSIGN_NAME
    (13) value -> . ASSIGN_NODE_NUMBER
    (14) value -> . DECLARE_ASSIGN_NAME value
    (15) value -> . SPECIAL_FEATURE value
    (16) value -> . expression
    (18) value -> . IDENTIFIER
    (19) value -> . QUOTED_STRING
    (17) expression -> . IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS

    ASSIGN_NAME     shift and go to state 3
    ASSIGN_NODE_NUMBER shift and go to state 4
    DECLARE_ASSIGN_NAME shift and go to state 5
    SPECIAL_FEATURE shift and go to state 6
    IDENTIFIER      shift and go to state 8
    QUOTED_STRING   shift and go to state 9

    value                          shift and go to state 10
    expression                     shift and go to state 7

state 2

    (1) program -> value .

    ASSIGN_NAME     reduce using rule 1 (program -> value .)
    ASSIGN_NODE_NUMBER reduce using rule 1 (program -> value .)
    DECLARE_ASSIGN_NAME reduce using rule 1 (program -> value .)
    SPECIAL_FEATURE reduce using rule 1 (program -> value .)
    IDENTIFIER      reduce using rule 1 (program -> value .)
    QUOTED_STRING   reduce using rule 1 (program -> value .)
    $end            reduce using rule 1 (program -> value .)


state 3

    (12) value -> ASSIGN_NAME .

    ASSIGN_NAME     reduce using rule 12 (value -> ASSIGN_NAME .)
    ASSIGN_NODE_NUMBER reduce using rule 12 (value -> ASSIGN_NAME .)
    DECLARE_ASSIGN_NAME reduce using rule 12 (value -> ASSIGN_NAME .)
    SPECIAL_FEATURE reduce using rule 12 (value -> ASSIGN_NAME .)
    IDENTIFIER      reduce using rule 12 (value -> ASSIGN_NAME .)
    QUOTED_STRING   reduce using rule 12 (value -> ASSIGN_NAME .)
    $end            reduce using rule 12 (value -> ASSIGN_NAME .)
    CLOSE_ARGUMENTS reduce using rule 12 (value -> ASSIGN_NAME .)
    ITEM_SEPARATOR  reduce using rule 12 (value -> ASSIGN_NAME .)


state 4

    (13) value -> ASSIGN_NODE_NUMBER .

    ASSIGN_NAME     reduce using rule 13 (value -> ASSIGN_NODE_NUMBER .)
    ASSIGN_NODE_NUMBER reduce using rule 13 (value -> ASSIGN_NODE_NUMBER .)
    DECLARE_ASSIGN_NAME reduce using rule 13 (value -> ASSIGN_NODE_NUMBER .)
    SPECIAL_FEATURE reduce using rule 13 (value -> ASSIGN_NODE_NUMBER .)
    IDENTIFIER      reduce using rule 13 (value -> ASSIGN_NODE_NUMBER .)
    QUOTED_STRING   reduce using rule 13 (value -> ASSIGN_NODE_NUMBER .)
    $end            reduce using rule 13 (value -> ASSIGN_NODE_NUMBER .)
    CLOSE_ARGUMENTS reduce using rule 13 (value -> ASSIGN_NODE_NUMBER .)
    ITEM_SEPARATOR  reduce using rule 13 (value -> ASSIGN_NODE_NUMBER .)


state 5

    (14) value -> DECLARE_ASSIGN_NAME . value
    (12) value -> . ASSIGN_NAME
    (13) value -> . ASSIGN_NODE_NUMBER
    (14) value -> . DECLARE_ASSIGN_NAME value
    (15) value -> . SPECIAL_FEATURE value
    (16) value -> . expression
    (18) value -> . IDENTIFIER
    (19) value -> . QUOTED_STRING
    (17) expression -> . IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS

    ASSIGN_NAME     shift and go to state 3
    ASSIGN_NODE_NUMBER shift and go to state 4
    DECLARE_ASSIGN_NAME shift and go to state 5
    SPECIAL_FEATURE shift and go to state 6
    IDENTIFIER      shift and go to state 8
    QUOTED_STRING   shift and go to state 9

    value                          shift and go to state 11
    expression                     shift and go to state 7

state 6

    (15) value -> SPECIAL_FEATURE . value
    (12) value -> . ASSIGN_NAME
    (13) value -> . ASSIGN_NODE_NUMBER
    (14) value -> . DECLARE_ASSIGN_NAME value
    (15) value -> . SPECIAL_FEATURE value
    (16) value -> . expression
    (18) value -> . IDENTIFIER
    (19) value -> . QUOTED_STRING
    (17) expression -> . IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS

    ASSIGN_NAME     shift and go to state 3
    ASSIGN_NODE_NUMBER shift and go to state 4
    DECLARE_ASSIGN_NAME shift and go to state 5
    SPECIAL_FEATURE shift and go to state 6
    IDENTIFIER      shift and go to state 8
    QUOTED_STRING   shift and go to state 9

    value                          shift and go to state 12
    expression                     shift and go to state 7

state 7

    (16) value -> expression .

    ASSIGN_NAME     reduce using rule 16 (value -> expression .)
    ASSIGN_NODE_NUMBER reduce using rule 16 (value -> expression .)
    DECLARE_ASSIGN_NAME reduce using rule 16 (value -> expression .)
    SPECIAL_FEATURE reduce using rule 16 (value -> expression .)
    IDENTIFIER      reduce using rule 16 (value -> expression .)
    QUOTED_STRING   reduce using rule 16 (value -> expression .)
    $end            reduce using rule 16 (value -> expression .)
    CLOSE_ARGUMENTS reduce using rule 16 (value -> expression .)
    ITEM_SEPARATOR  reduce using rule 16 (value -> expression .)


state 8

    (18) value -> IDENTIFIER .
    (17) expression -> IDENTIFIER . OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS

    ASSIGN_NAME     reduce using rule 18 (value -> IDENTIFIER .)
    ASSIGN_NODE_NUMBER reduce using rule 18 (value -> IDENTIFIER .)
    DECLARE_ASSIGN_NAME reduce using rule 18 (value -> IDENTIFIER .)
    SPECIAL_FEATURE reduce using rule 18 (value -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 18 (value -> IDENTIFIER .)
    QUOTED_STRING   reduce using rule 18 (value -> IDENTIFIER .)
    $end            reduce using rule 18 (value -> IDENTIFIER .)
    CLOSE_ARGUMENTS reduce using rule 18 (value -> IDENTIFIER .)
    ITEM_SEPARATOR  reduce using rule 18 (value -> IDENTIFIER .)
    OPEN_ARGUMENTS  shift and go to state 13


state 9

    (19) value -> QUOTED_STRING .

    ASSIGN_NAME     reduce using rule 19 (value -> QUOTED_STRING .)
    ASSIGN_NODE_NUMBER reduce using rule 19 (value -> QUOTED_STRING .)
    DECLARE_ASSIGN_NAME reduce using rule 19 (value -> QUOTED_STRING .)
    SPECIAL_FEATURE reduce using rule 19 (value -> QUOTED_STRING .)
    IDENTIFIER      reduce using rule 19 (value -> QUOTED_STRING .)
    QUOTED_STRING   reduce using rule 19 (value -> QUOTED_STRING .)
    $end            reduce using rule 19 (value -> QUOTED_STRING .)
    CLOSE_ARGUMENTS reduce using rule 19 (value -> QUOTED_STRING .)
    ITEM_SEPARATOR  reduce using rule 19 (value -> QUOTED_STRING .)


state 10

    (2) program -> program value .

    ASSIGN_NAME     reduce using rule 2 (program -> program value .)
    ASSIGN_NODE_NUMBER reduce using rule 2 (program -> program value .)
    DECLARE_ASSIGN_NAME reduce using rule 2 (program -> program value .)
    SPECIAL_FEATURE reduce using rule 2 (program -> program value .)
    IDENTIFIER      reduce using rule 2 (program -> program value .)
    QUOTED_STRING   reduce using rule 2 (program -> program value .)
    $end            reduce using rule 2 (program -> program value .)


state 11

    (14) value -> DECLARE_ASSIGN_NAME value .

    ASSIGN_NAME     reduce using rule 14 (value -> DECLARE_ASSIGN_NAME value .)
    ASSIGN_NODE_NUMBER reduce using rule 14 (value -> DECLARE_ASSIGN_NAME value .)
    DECLARE_ASSIGN_NAME reduce using rule 14 (value -> DECLARE_ASSIGN_NAME value .)
    SPECIAL_FEATURE reduce using rule 14 (value -> DECLARE_ASSIGN_NAME value .)
    IDENTIFIER      reduce using rule 14 (value -> DECLARE_ASSIGN_NAME value .)
    QUOTED_STRING   reduce using rule 14 (value -> DECLARE_ASSIGN_NAME value .)
    $end            reduce using rule 14 (value -> DECLARE_ASSIGN_NAME value .)
    CLOSE_ARGUMENTS reduce using rule 14 (value -> DECLARE_ASSIGN_NAME value .)
    ITEM_SEPARATOR  reduce using rule 14 (value -> DECLARE_ASSIGN_NAME value .)


state 12

    (15) value -> SPECIAL_FEATURE value .

    ASSIGN_NAME     reduce using rule 15 (value -> SPECIAL_FEATURE value .)
    ASSIGN_NODE_NUMBER reduce using rule 15 (value -> SPECIAL_FEATURE value .)
    DECLARE_ASSIGN_NAME reduce using rule 15 (value -> SPECIAL_FEATURE value .)
    SPECIAL_FEATURE reduce using rule 15 (value -> SPECIAL_FEATURE value .)
    IDENTIFIER      reduce using rule 15 (value -> SPECIAL_FEATURE value .)
    QUOTED_STRING   reduce using rule 15 (value -> SPECIAL_FEATURE value .)
    $end            reduce using rule 15 (value -> SPECIAL_FEATURE value .)
    CLOSE_ARGUMENTS reduce using rule 15 (value -> SPECIAL_FEATURE value .)
    ITEM_SEPARATOR  reduce using rule 15 (value -> SPECIAL_FEATURE value .)


state 13

    (17) expression -> IDENTIFIER OPEN_ARGUMENTS . parameters CLOSE_ARGUMENTS
    (3) parameters -> . parameter
    (4) parameters -> . parameters ITEM_SEPARATOR parameter
    (5) parameter -> .
    (6) parameter -> . tag_parameter
    (7) parameter -> . simple_parameter
    (10) tag_parameter -> . TAG_CHAR simple_parameter
    (8) simple_parameter -> . value
    (9) simple_parameter -> . name NAME_VALUE_SEPARATOR value
    (12) value -> . ASSIGN_NAME
    (13) value -> . ASSIGN_NODE_NUMBER
    (14) value -> . DECLARE_ASSIGN_NAME value
    (15) value -> . SPECIAL_FEATURE value
    (16) value -> . expression
    (18) value -> . IDENTIFIER
    (19) value -> . QUOTED_STRING
    (11) name -> . IDENTIFIER
    (17) expression -> . IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS

    CLOSE_ARGUMENTS reduce using rule 5 (parameter -> .)
    ITEM_SEPARATOR  reduce using rule 5 (parameter -> .)
    TAG_CHAR        shift and go to state 19
    ASSIGN_NAME     shift and go to state 3
    ASSIGN_NODE_NUMBER shift and go to state 4
    DECLARE_ASSIGN_NAME shift and go to state 5
    SPECIAL_FEATURE shift and go to state 6
    IDENTIFIER      shift and go to state 14
    QUOTED_STRING   shift and go to state 9

    parameters                     shift and go to state 15
    parameter                      shift and go to state 16
    tag_parameter                  shift and go to state 17
    simple_parameter               shift and go to state 18
    value                          shift and go to state 20
    name                           shift and go to state 21
    expression                     shift and go to state 7

state 14

    (18) value -> IDENTIFIER .
    (11) name -> IDENTIFIER .
    (17) expression -> IDENTIFIER . OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS

    CLOSE_ARGUMENTS reduce using rule 18 (value -> IDENTIFIER .)
    ITEM_SEPARATOR  reduce using rule 18 (value -> IDENTIFIER .)
    NAME_VALUE_SEPARATOR reduce using rule 11 (name -> IDENTIFIER .)
    OPEN_ARGUMENTS  shift and go to state 13


state 15

    (17) expression -> IDENTIFIER OPEN_ARGUMENTS parameters . CLOSE_ARGUMENTS
    (4) parameters -> parameters . ITEM_SEPARATOR parameter

    CLOSE_ARGUMENTS shift and go to state 22
    ITEM_SEPARATOR  shift and go to state 23


state 16

    (3) parameters -> parameter .

    CLOSE_ARGUMENTS reduce using rule 3 (parameters -> parameter .)
    ITEM_SEPARATOR  reduce using rule 3 (parameters -> parameter .)


state 17

    (6) parameter -> tag_parameter .

    CLOSE_ARGUMENTS reduce using rule 6 (parameter -> tag_parameter .)
    ITEM_SEPARATOR  reduce using rule 6 (parameter -> tag_parameter .)


state 18

    (7) parameter -> simple_parameter .

    CLOSE_ARGUMENTS reduce using rule 7 (parameter -> simple_parameter .)
    ITEM_SEPARATOR  reduce using rule 7 (parameter -> simple_parameter .)


state 19

    (10) tag_parameter -> TAG_CHAR . simple_parameter
    (8) simple_parameter -> . value
    (9) simple_parameter -> . name NAME_VALUE_SEPARATOR value
    (12) value -> . ASSIGN_NAME
    (13) value -> . ASSIGN_NODE_NUMBER
    (14) value -> . DECLARE_ASSIGN_NAME value
    (15) value -> . SPECIAL_FEATURE value
    (16) value -> . expression
    (18) value -> . IDENTIFIER
    (19) value -> . QUOTED_STRING
    (11) name -> . IDENTIFIER
    (17) expression -> . IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS

    ASSIGN_NAME     shift and go to state 3
    ASSIGN_NODE_NUMBER shift and go to state 4
    DECLARE_ASSIGN_NAME shift and go to state 5
    SPECIAL_FEATURE shift and go to state 6
    IDENTIFIER      shift and go to state 14
    QUOTED_STRING   shift and go to state 9

    simple_parameter               shift and go to state 24
    value                          shift and go to state 20
    name                           shift and go to state 21
    expression                     shift and go to state 7

state 20

    (8) simple_parameter -> value .

    CLOSE_ARGUMENTS reduce using rule 8 (simple_parameter -> value .)
    ITEM_SEPARATOR  reduce using rule 8 (simple_parameter -> value .)


state 21

    (9) simple_parameter -> name . NAME_VALUE_SEPARATOR value

    NAME_VALUE_SEPARATOR shift and go to state 25


state 22

    (17) expression -> IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS .

    ASSIGN_NAME     reduce using rule 17 (expression -> IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS .)
    ASSIGN_NODE_NUMBER reduce using rule 17 (expression -> IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS .)
    DECLARE_ASSIGN_NAME reduce using rule 17 (expression -> IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS .)
    SPECIAL_FEATURE reduce using rule 17 (expression -> IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS .)
    IDENTIFIER      reduce using rule 17 (expression -> IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS .)
    QUOTED_STRING   reduce using rule 17 (expression -> IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS .)
    $end            reduce using rule 17 (expression -> IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS .)
    CLOSE_ARGUMENTS reduce using rule 17 (expression -> IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS .)
    ITEM_SEPARATOR  reduce using rule 17 (expression -> IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS .)


state 23

    (4) parameters -> parameters ITEM_SEPARATOR . parameter
    (5) parameter -> .
    (6) parameter -> . tag_parameter
    (7) parameter -> . simple_parameter
    (10) tag_parameter -> . TAG_CHAR simple_parameter
    (8) simple_parameter -> . value
    (9) simple_parameter -> . name NAME_VALUE_SEPARATOR value
    (12) value -> . ASSIGN_NAME
    (13) value -> . ASSIGN_NODE_NUMBER
    (14) value -> . DECLARE_ASSIGN_NAME value
    (15) value -> . SPECIAL_FEATURE value
    (16) value -> . expression
    (18) value -> . IDENTIFIER
    (19) value -> . QUOTED_STRING
    (11) name -> . IDENTIFIER
    (17) expression -> . IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS

    CLOSE_ARGUMENTS reduce using rule 5 (parameter -> .)
    ITEM_SEPARATOR  reduce using rule 5 (parameter -> .)
    TAG_CHAR        shift and go to state 19
    ASSIGN_NAME     shift and go to state 3
    ASSIGN_NODE_NUMBER shift and go to state 4
    DECLARE_ASSIGN_NAME shift and go to state 5
    SPECIAL_FEATURE shift and go to state 6
    IDENTIFIER      shift and go to state 14
    QUOTED_STRING   shift and go to state 9

    parameter                      shift and go to state 26
    tag_parameter                  shift and go to state 17
    simple_parameter               shift and go to state 18
    value                          shift and go to state 20
    name                           shift and go to state 21
    expression                     shift and go to state 7

state 24

    (10) tag_parameter -> TAG_CHAR simple_parameter .

    CLOSE_ARGUMENTS reduce using rule 10 (tag_parameter -> TAG_CHAR simple_parameter .)
    ITEM_SEPARATOR  reduce using rule 10 (tag_parameter -> TAG_CHAR simple_parameter .)


state 25

    (9) simple_parameter -> name NAME_VALUE_SEPARATOR . value
    (12) value -> . ASSIGN_NAME
    (13) value -> . ASSIGN_NODE_NUMBER
    (14) value -> . DECLARE_ASSIGN_NAME value
    (15) value -> . SPECIAL_FEATURE value
    (16) value -> . expression
    (18) value -> . IDENTIFIER
    (19) value -> . QUOTED_STRING
    (17) expression -> . IDENTIFIER OPEN_ARGUMENTS parameters CLOSE_ARGUMENTS

    ASSIGN_NAME     shift and go to state 3
    ASSIGN_NODE_NUMBER shift and go to state 4
    DECLARE_ASSIGN_NAME shift and go to state 5
    SPECIAL_FEATURE shift and go to state 6
    IDENTIFIER      shift and go to state 8
    QUOTED_STRING   shift and go to state 9

    value                          shift and go to state 27
    expression                     shift and go to state 7

state 26
